# translateflow

./: .dockerignore  .env.backend.example  .env.dokploy.example  .env.example  .env.vercel.example  .gitignore  BILINGUAL_OUTPUT_TEST_REPORT.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_DOKPLOY.md  DEPLOYMENT_VERCEL.md  DOCKER_VOLUMES.md  Dockerfile  Dockerfile.development  Dockerfile.production  Launch.sh  PROMPT.md  PROMPT.md2  README.md  README_EN.md  VERIFICATION_REPORT.md  ainiee.db-shm  ainiee.db-wal  ainiee_cli.py  app.md  changelog1.md  console-all.txt  console-output.txt  debug_operation_logger.py  dev_server.py  docker-compose.dokploy.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  justfile  pb1.md  planx.md  prepare.sh  pyproject.toml  (+6 more)
.claude/: ralph-loop.local.md
.github/workflows/: Web_Build.yml  docker-publish.yml
.ralph/: current-events  current-loop-id  events-20260226-150650.jsonl  events-20260226-152739.jsonl  events-20260226-161454.jsonl  events-20260226-162738.jsonl  events-20260226-231242.jsonl  events-20260227-004400.jsonl  events-20260227-025921.jsonl  events-20260227-031142.jsonl  events-20260227-053536.jsonl  events-20260227-073335.jsonl  events-20260227-074826.jsonl  events-20260227-080423.jsonl  events-20260227-081119.jsonl  events-20260227-081436.jsonl  events-20260227-081508.jsonl  events-20260227-082315.jsonl  events-20260227-100600.jsonl  events-20260227-104539.jsonl  events-20260227-105803.jsonl  events-20260227-111259.jsonl  events-20260227-112708.jsonl  events-20260227-113755.jsonl  events-20260227-120437.jsonl  events-20260227-122201.jsonl  events-20260227-122224.jsonl  events-20260227-123042.jsonl  events-20260227-123727.jsonl  events-20260227-125102.jsonl  events-20260227-125808.jsonl  events-20260227-130625.jsonl  events-20260227-132616.jsonl  events-20260227-134249.jsonl  events-20260227-134426.jsonl  events-20260227-141505.jsonl  events-20260227-142304.jsonl  events-20260227-143012.jsonl  events-20260227-145820.jsonl  events-20260227-150733.jsonl  (+46 more)
.ralph/agent/: DEPLOYMENT_ANALYSIS.md  MCP_UI_IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  api-docs-snapshot.md  context.md  handoff.md  memories.md  memories.md~HEAD  scratchpad.md  summary.md  tasks.jsonl
.serena/: project.yml
.serena/memories/: current_plan.md  mem-1772331222-d7cc-complete.md  task-1772331222-d7cc-plan.md  task_completion_summary.md  team-api-routes-complete.md  team-invitation-email-complete.md  user_service_implementation.md
.trae/documents/: AiNiee_Product_UI_Blueprint.md  AiNiee_UI_v2_Design_Spec.md  Web控制台UI优化_PRD.md  Web控制台UI优化_技术方案.md  Web控制台UI优化_页面设计规范.md
I18N/: en.json  ja.json  zh_CN.json
ModuleFolders/Base/: Base.py  EventManager.py
ModuleFolders/Domain/FileConverter/: OfficeFileConverter.py
ModuleFolders/UserInterface/: AIProofreadMenu.py  APIManager.py  AutomationMenu.py  EditorMenu.py  FileSelector.py  GlossaryMenu.py  InputListener.py
PluginScripts/BilingualPlugin/: BilingualPlugin.py
Resource/: config.json
Resource/Localization/: APIManagement.json  EditView.json  OutputSettings.json  TranslationChecker.json
Resource/Version/: version.json
Resource/profiles/: Elysia.json  default.json
Resource/rules_profiles/: default.json  月白.json
Tools/WebServer/: App.tsx  README.md  THEME_FIX_REPORT.md  Web_vs_Qt_Analysis.md  constants.ts  index.css  index.html  language_mapper.py  metadata.json  package-lock.json  package.json  theme-test.html  types.ts  vercel.json  vite.config.ts  web_server.py
claudedocs/: bilingual_output_test_summary.md
data/: translateflow.db-shm  translateflow.db-wal
migrations/: seed.sql
scripts/: build-docker-multiplatform.sh  db-migrate.sh  deploy-dokploy.sh  deploy-vercel-frontend.sh  deploy.sh  health-check.sh
(+174 files in other folders)
