[project]
name = "ainiee-cli"
version = "0.1.0"
description = "A CLI-based hard fork of AiNiee for batch translation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "boto3",
    "cohere",
    "anthropic",
    "google-genai",
    "tiktoken",
    "numpy",
    "openpyxl",
    "opencc",
    "beautifulsoup4",
    "lxml",
    "chardet",
    "PyYAML",
    "requests",
    "httpx[http2]",
    "python-pptx",
    "polib",
    "pandas",
    "rich",
    "tqdm",
    "jaconv",
    "python-rapidjson",
    "protobuf==4.25.7",
    "language-data",
    "langcodes",
    "msgspec",
    "spacy",
    "sudachipy",
    "sudachidict-core",
    "mediapipe",
    "babeldoc",
    "absl-py",
    "attrs>=19.1.0",
    "flatbuffers>=2.0",
    "bitstring>=4.3.0",
    "configargparse>=1.7",
    "huggingface-hub>=0.27.0",
    "onnx>=1.17.1",
    "onnxruntime>=1.20.1",
    "orjson>=3.10.14",
    "pdfminer-six==20250416",
    "peewee>=3.17.8",
    "psutil>=7.0.0",
    "pymupdf>=1.25.1",
    "toml>=0.10.2",
    "xsdata[cli,lxml,soap]>=24.12",
    "msgpack>=1.1.0",
    "pydantic>=2.10.6",
    "tenacity>=9.0.0",
    "freetype-py>=2.5.1",
    "python-levenshtein>=0.27.1",
    "rapidocr-onnxruntime>=1.4.4",
    "pyzstd",
    "rtree",
    "scikit-learn>=1.7.1",
]

[project.scripts]
ainiee = "ainiee_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ModuleFolders", "Resource", "PluginScripts", "StevExtraction", "I18N"]

[tool.hatch.build.targets.sdist]
include = ["AiNiee-CLI.py", "pyproject.toml", "README.md", "LICENSE"]